Halfway through data binding

--- a/index.html
+++ b/index.html
@@ -35,29 +35,33 @@
                         <p class="country"></p>
                         <p class="state"></p>
                     </div>
-                    
+
                     <div>
                         <h3>Profiles</h3>
                         <ul class="profiles"></ul>
-                            
+
                     </div>
                 </div>
                 <div>
-                    <h3 class="projects">Projects</h3>
-                    <div class="project-1">
-                        <p class="title"></p>
-                        <p class="description"></p>
-                        <p class=liveUrl></p>
-                        <p class=githubUrl></p>
-                        <p class="difficulty"></p>
-                        <p class="enjoyment"></p>
-                        <p class="learningValue"></p>
-                        <ul class="skills-used">
-                            <li class="skill-1"></li>
-                            <li class="skill-2"></li>
-                            <li class="skill-3"></li>
-                        </ul>
-                    </div>
+                    <h3>Projects</h3>
+                    <ul class="projects">
+                        <li>
+                            <ul>
+                                <li class="title"></li>
+                                <li class="descrilition"></li>
+                                <li class=liveUrl></li>
+                                <li class=githubUrl></li>
+                                <li class="difficulty"></li>
+                                <li class="enjoyment"></li>
+                                <li class="learningValue"></li>
+                                <ul class="skills-used">
+                                    <li class="skill-1"></li>
+                                    <li class="skill-2"></li>
+                                    <li class="skill-3"></li>
+                                </ul>
+                            </ul>
+                        </li>
+                    </ul>
                     <div class="project-2">
                         <p class="title"></p>
                         <p class="description"></p>
